Add suggestion styling for item code input in order registration

--- a/order-register.html
+++ b/order-register.html
@@ -55,7 +55,7 @@
             <p class="muted-text">Admin-only: log items that have been ordered but not yet received.</p>
             <form id="orderForm" class="inventory-form" autocomplete="off">
             <div class="form-row">
-              <label>Item Code
+              <label class="with-suggest">Item Code
                 <input id="orderCode" required placeholder="SKU/part">
                 <div id="orderCodeSuggest" class="suggestions"></div>
               </label>
