--- a/inventory-list.html
+++ b/inventory-list.html
@@ -46,7 +46,7 @@
           <input id="searchBox" type="text" placeholder="Search by code or name..." style="padding:8px;border-radius:6px;border:1px solid #e6edf3;width:100%;max-width:300px;">
         </div>
         <table id="invTable">
-          <thead><tr><th>Code</th><th>Name</th><th>Total In</th><th>Total Out</th><th>Reserved</th><th>Available</th><th>Last Updated</th></tr></thead>
+          <thead><tr><th>Code</th><th>Name</th><th>Jobs</th><th>Total In</th><th>Total Out</th><th>Reserved</th><th>Available</th><th>Last Updated</th></tr></thead>
           <tbody></tbody>
         </table>
       </section>
@@ -57,7 +57,7 @@
           <input id="jobSearchBox" type="text" placeholder="Enter job ID to see all activity..." style="padding:8px;border-radius:6px;border:1px solid #e6edf3;width:100%;max-width:400px;">
         </div>
         <table id="jobTransactionTable">
-          <thead><tr><th>Type</th><th>Code</th><th>Qty</th><th>Location</th><th>Reason</th><th>Notes</th><th>When</th></tr></thead>
+          <thead><tr><th>Type</th><th>Job</th><th>Code</th><th>Qty</th><th>Location</th><th>Reason</th><th>Notes</th><th>When</th></tr></thead>
           <tbody></tbody>
         </table>
       </section>
