--- a/settings.html
+++ b/settings.html
@@ -30,9 +30,9 @@
         <a  href="employee-dashboard.html" data-role="employee">Dashboard</a>
         <a href="inventory-operations.html">Operations</a>
       <a href="inventory-list.html">Inventory</a>
-      <a href="job-report.html">Job Report</a>
+        <a href="job-report.html">Project Report</a>
       <a href="item-master.html" data-role="admin">Item Master</a>
-      <a href="job-creator.html" data-role="admin">Job Creator</a>
+        <a href="job-creator.html" data-role="admin">Project Manager</a>
       <a href="order-register.html" data-role="admin">Orders</a>
       <a class="active" href="settings.html" data-role="admin">Settings</a>
       <a href="settings-employee.html" data-role="employee">Settings</a>
