--- a/employee-dashboard.html
+++ b/employee-dashboard.html
@@ -36,9 +36,9 @@
       <a class="active" href="employee-dashboard.html" data-role="employee">Dashboard</a>
       <a href="inventory-operations.html">Operations</a>
       <a href="inventory-list.html">Inventory</a>
-      <a href="job-report.html">Job Report</a>
+        <a href="job-report.html">Project Report</a>
       <a href="item-master.html" data-role="admin">Item Master</a>
-      <a href="job-creator.html" data-role="admin">Job Creator</a>
+        <a href="job-creator.html" data-role="admin">Project Manager</a>
       <a href="order-register.html" data-role="admin">Orders</a>
       <a href="settings.html" data-role="admin">Settings</a>
       <a href="settings-employee.html" data-role="employee">Settings</a>
@@ -64,7 +64,7 @@
           <div style="display:flex;gap:8px;">
             <a href="inventory-operations.html?mode=checkout" class="task-btn" style="background:#fff;color:#0a1b2b;box-shadow:0 10px 22px rgba(255,255,255,0.2);">Check-in / Pick</a>
             <a href="inventory-list.html" class="task-btn" style="background:rgba(255,255,255,0.14);color:#fff;border:1px solid rgba(255,255,255,0.25);">Check Stock</a>
-            <a href="job-report.html" class="task-btn" style="background:rgba(255,255,255,0.14);color:#fff;border:1px solid rgba(255,255,255,0.25);">Job Activity</a>
+            <a href="job-report.html" class="task-btn" style="background:rgba(255,255,255,0.14);color:#fff;border:1px solid rgba(255,255,255,0.25);">Project Activity</a>
           </div>
         </div>
       </section>
@@ -77,7 +77,7 @@
           </div>
         </div>
         <table id="pendingTable">
-          <thead><tr><th>Code</th><th>Job</th><th>Qty Out</th><th>Outstanding</th><th>Last Out</th></tr></thead>
+          <thead><tr><th>Code</th><th>Project</th><th>Qty Out</th><th>Outstanding</th><th>Last Out</th></tr></thead>
           <tbody><tr><td colspan="5" style="text-align:center;color:#6b7280;">Loading...</td></tr></tbody>
         </table>
       </section>
@@ -85,7 +85,7 @@
       <section class="card">
         <h3>Recent Activity</h3>
         <table id="empActivityTable">
-          <thead><tr><th>Type</th><th>Code</th><th>Qty</th><th>Job</th><th>When</th></tr></thead>
+          <thead><tr><th>Type</th><th>Code</th><th>Qty</th><th>Project</th><th>When</th></tr></thead>
           <tbody><tr><td colspan="5" style="text-align:center;color:#6b7280;">Loading...</td></tr></tbody>
         </table>
       </section>
