--- a/inventory-list.html
+++ b/inventory-list.html
@@ -25,9 +25,9 @@
         <a  href="employee-dashboard.html" data-role="employee">Dashboard</a>
         <a href="inventory-operations.html">Operations</a>
         <a class="active" href="inventory-list.html">Inventory</a>
-        <a href="job-report.html">Job Report</a>
+        <a href="job-report.html">Project Report</a>
         <a href="item-master.html" data-role="admin">Item Master</a>
-        <a href="job-creator.html" data-role="admin">Job Creator</a>
+        <a href="job-creator.html" data-role="admin">Project Manager</a>
         <a href="order-register.html" data-role="admin">Orders</a>
         <a href="settings.html" data-role="admin">Settings</a>
         <a href="settings-employee.html" data-role="employee">Settings</a>
@@ -52,9 +52,9 @@
       </section>
 
       <section class="card">
-        <h3>Search Job Transactions</h3>
+        <h3>Search Project Transactions</h3>
         <div style="margin-bottom:12px;">
-          <input id="jobSearchBox" type="text" placeholder="Enter job ID to see all activity..." style="padding:8px;border-radius:6px;border:1px solid #e6edf3;width:100%;max-width:400px;">
+          <input id="jobSearchBox" type="text" placeholder="Enter project ID to see all activity..." style="padding:8px;border-radius:6px;border:1px solid #e6edf3;width:100%;max-width:400px;">
         </div>
         <table id="jobTransactionTable">
           <thead><tr><th>Type</th><th>Job</th><th>Code</th><th>Qty</th><th>Location</th><th>Reason</th><th>Notes</th><th>When</th></tr></thead>
@@ -63,12 +63,12 @@
       </section>
 
       <section class="card">
-        <h3>Job Inventory Summary</h3>
+        <h3>Project Inventory Summary</h3>
         <div style="margin-bottom:12px;">
-          <input id="jobSummarySearch" type="text" placeholder="Search by job ID..." style="padding:8px;border-radius:6px;border:1px solid #e6edf3;width:100%;max-width:300px;">
+          <input id="jobSummarySearch" type="text" placeholder="Search by project ID..." style="padding:8px;border-radius:6px;border:1px solid #e6edf3;width:100%;max-width:300px;">
         </div>
         <table id="jobSummaryTable">
-          <thead><tr><th>Job ID</th><th>Item Code</th><th>Checked In</th><th>Checked Out</th><th>Reserved</th><th>Net Usage</th></tr></thead>
+          <thead><tr><th>Project ID</th><th>Item Code</th><th>Checked In</th><th>Checked Out</th><th>Reserved</th><th>Net Usage</th></tr></thead>
           <tbody></tbody>
         </table>
       </section>
