--- a/order-register.html
+++ b/order-register.html
@@ -25,9 +25,9 @@
         <a  href="employee-dashboard.html" data-role="employee">Dashboard</a>
         <a href="inventory-operations.html">Operations</a>
       <a href="inventory-list.html">Inventory</a>
-      <a href="job-report.html">Job Report</a>
+        <a href="job-report.html">Project Report</a>
       <a href="item-master.html" data-role="admin">Item Master</a>
-      <a href="job-creator.html" data-role="admin">Job Creator</a>
+      <a href="job-creator.html" data-role="admin">Project Manager</a>
       <a class="active" href="order-register.html" data-role="admin">Orders</a>
       <a href="settings.html" data-role="admin">Settings</a>
       <a href="settings-employee.html" data-role="employee">Settings</a>
@@ -45,7 +45,7 @@
       <section class="card" style="margin-bottom:12px;position:sticky;top:0;z-index:5;">
         <div class="mode-tabs">
           <button class="mode-btn active" data-mode="order">Register Order</button>
-          <button class="mode-btn" data-mode="reserve">Allocate to Job (Reserve)</button>
+          <button class="mode-btn" data-mode="reserve">Allocate to Project (Reserve)</button>
         </div>
       </section>
 
@@ -72,7 +72,7 @@
                 <button type="button" class="muted" data-next-monday="true">Next Monday</button>
               </div>
               <div class="form-row">
-                <label>Assign to Job (optional)
+                <label>Assign to Project (optional)
                   <select id="orderJob">
                     <option value="">General Inventory</option>
                   </select>
@@ -109,7 +109,7 @@
             </div>
             <h3>Recently Registered Orders</h3>
             <table id="recentOrdersTable">
-              <thead><tr><th>Code</th><th>Name</th><th>Qty</th><th>Job</th><th>ETA</th><th>When</th></tr></thead>
+              <thead><tr><th>Code</th><th>Name</th><th>Qty</th><th>Project</th><th>ETA</th><th>When</th></tr></thead>
               <tbody></tbody>
             </table>
           </section>
@@ -129,9 +129,9 @@
                 <div id="reserve-lines" class="line-items"></div>
               </div>
               <div class="form-row">
-                <label>Job Name/ID
+                <label>Project Name/ID
                   <select id="reserve-jobId" required>
-                    <option value="">Select job...</option>
+                    <option value="">Select project...</option>
                   </select>
                 </label>
               </div>
@@ -154,9 +154,9 @@
               <input id="reserveFilter" placeholder="Filter by job/code" />
               <span class="badge warn">Reserved</span>
             </div>
-            <h3>Active Reservations</h3>
+            <h3>Active Project Reservations</h3>
             <table id="reserveTable">
-              <thead><tr><th>Code</th><th>Job</th><th>Qty</th><th class="mobile-hide">Expected Return</th><th class="mobile-hide">Reserved On</th></tr></thead>
+              <thead><tr><th>Code</th><th>Project</th><th>Qty</th><th class="mobile-hide">Expected Return</th><th class="mobile-hide">Reserved On</th></tr></thead>
               <tbody></tbody>
             </table>
           </section>
