--- a/inventory-list.html
+++ b/inventory-list.html
@@ -51,16 +51,7 @@
         </table>
       </section>
 
-      <section class="card">
-        <h3>Search Project Transactions</h3>
-        <div style="margin-bottom:12px;">
-          <input id="jobSearchBox" type="text" placeholder="Enter project ID to see all activity..." style="padding:8px;border-radius:6px;border:1px solid #e6edf3;width:100%;max-width:400px;">
-        </div>
-        <table id="jobTransactionTable">
-          <thead><tr><th>Type</th><th>Job</th><th>Code</th><th>Qty</th><th>Location</th><th>Reason</th><th>Notes</th><th>When</th></tr></thead>
-          <tbody></tbody>
-        </table>
-      </section>
+      
 
       <section class="card">
         <h3>Project Inventory Summary</h3>
@@ -69,6 +60,17 @@
         </div>
         <table id="jobSummaryTable">
           <thead><tr><th>Project ID</th><th>Item Code</th><th>Checked In</th><th>Checked Out</th><th>Reserved</th><th>Net Usage</th></tr></thead>
+          <tbody></tbody>
+        </table>
+      </section>
+
+      <section class="card">
+        <h3>Incoming Inventory</h3>
+        <div style="margin-bottom:12px;">
+          <input id="incomingSearchBox" type="text" placeholder="Search by code or project..." style="padding:8px;border-radius:6px;border:1px solid #e6edf3;width:100%;max-width:300px;">
+        </div>
+        <table id="incomingTable">
+          <thead><tr><th>Code</th><th>Name</th><th>Qty</th><th>Project</th><th>ETA</th><th>Ordered On</th></tr></thead>
           <tbody></tbody>
         </table>
       </section>
