--- a/inventory-list.html
+++ b/inventory-list.html
@@ -46,7 +46,7 @@
           <input id="searchBox" type="text" placeholder="Search by code or name..." style="padding:8px;border-radius:6px;border:1px solid #e6edf3;width:100%;max-width:300px;">
         </div>
         <table id="invTable">
-          <thead><tr><th>Code</th><th>Name</th><th>Jobs</th><th>Total In</th><th>Total Out</th><th>Reserved</th><th>Available</th><th>Last Updated</th></tr></thead>
+          <thead><tr><th>Code</th><th>Name</th><th>Projects</th><th>Total In</th><th>Total Out</th><th>Reserved</th><th>Available</th><th>Last Updated</th></tr></thead>
           <tbody></tbody>
         </table>
       </section>
@@ -59,7 +59,7 @@
           <input id="jobSummarySearch" type="text" placeholder="Search by project ID..." style="padding:8px;border-radius:6px;border:1px solid #e6edf3;width:100%;max-width:300px;">
         </div>
         <table id="jobSummaryTable">
-          <thead><tr><th>Project ID</th><th>Item Code</th><th>Checked In</th><th>Checked Out</th><th>Reserved</th><th>Net Usage</th></tr></thead>
+          <thead><tr><th>Project ID</th><th>Item Code</th><th>Open Orders</th><th>Checked In</th><th>Reserved</th><th>Checked Out</th><th>Available</th><th>Last Activity</th></tr></thead>
           <tbody></tbody>
         </table>
       </section>
